update swagger comment user
