# docs/swagger.json
@@ -879,7 +879,7 @@
                 }
             }
         },
-        "/user/login": {
+        "/api/v1/user/login": {
             "post": {
                 "description": "Authentifie un utilisateur avec son email et mot de passe et retourne un token JWT",
                 "consumes": [
@@ -943,7 +943,7 @@
                 }
             }
         },
-        "/user/register": {
+        "/api/v1/user/register": {
             "post": {
                 "description": "Enregistre un nouvel utilisateur avec un nom d'utilisateur, email et mot de passe",
                 "consumes": [
